--- a/styles.css
+++ b/styles.css
@@ -26,6 +26,12 @@
     gap: 3rem;
 }
 
+.flex-group {
+    display: flex;
+    flex-direction: column;
+    gap: 3rem;
+}
+
 img, svg {
     display: block;
     width: 100%;
@@ -34,14 +40,13 @@ img, svg {
 body {
     font-family: 'Bai Jamjuree', sans-serif;
     max-width: 100vw;
+    background-image: url(/images/bg-header-mobile.png);
+    background-repeat: no-repeat;
+    margin-top: 6rem;
 }
 
 main {
     max-width: 23.5rem;
-    background-image: url(/images/bg-header-mobile.png);
-    background-repeat: no-repeat;
-    
-    
 }
 
 .text-div {
@@ -72,7 +77,7 @@ main {
 }
 
 button {
-    width: 95%;
+    width: 20rem;
     padding: .75rem;
     border-radius: 2rem;
     border: none;
@@ -104,5 +109,32 @@ button {
     width: 50px;
 }
 
+@media (min-width: 23.5rem) {
 
+    body {
+        
+        background-image: url(images/bg-header-desktop.png);
+        margin: 0;
+    }
+
+    main {
+        max-width: 100vw;
+    }
+
+    .grid-flow {
+        place-items: center;
+    }
+
+    .flex-group {
+        flex-direction: row;
+    }
+
+    .para-heading {
+        max-width: 23.5rem;
+    }
+
+    .services {
+        gap: 2rem;
+    }
+}
 
